name:                tensorflow-records
version:             0.1.0.0
synopsis:            Encoder and decoder for the TensorFlow \"TFRecords\" format.
description:         Encoder and decoder for the TensorFlow \"TFRecords\" format.
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
license-file:        LICENSE
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:   src
  exposed-modules:  TensorFlow.Records
  other-modules:    TensorFlow.CRC32C
  build-depends: base >= 4.7 && < 5
               , bytestring
               , cereal
               -- TODO: Split Data.Digest.CRC32C out of snappy-framing for a
               -- lighter dependency?
               , snappy-framing >= 0.1.1
  default-language:    Haskell2010

Test-Suite RecordsTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: base
               , bytestring
               , cereal
               , tensorflow-records
               , test-framework
               , test-framework-quickcheck2


source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
