name:                tensorflow-test
version:             0.1.0.0
synopsis:            Some common functions for test suites.
description:         This package provides common utility functions for the
                     TensorFlow test suites.
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
license-file:        LICENSE
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:   src
  exposed-modules: TensorFlow.Test
  build-depends:  base >= 4.7 && < 5
                , HUnit
                , vector
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
