name:                tensorflow
version:             0.1.0.0
synopsis:            TensorFlow bindings.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:   src
  exposed-modules:  TensorFlow.Build
                  , TensorFlow.BuildOp
                  , TensorFlow.ControlFlow
                  , TensorFlow.Core
                  , TensorFlow.Internal.FFI
                  , TensorFlow.Internal.VarInt
                  , TensorFlow.Nodes
                  , TensorFlow.Output
                  , TensorFlow.Session
                  , TensorFlow.Tensor
                  , TensorFlow.Types
  other-modules:    TensorFlow.Internal.Raw
                  , TensorFlow.Orphans
  build-tools:      c2hs
  build-depends:  proto-lens == 0.1.*
                -- Used by the custom Setup script (for the test-suite).
                , proto-lens-protoc == 0.1.*
                , tensorflow-proto == 0.1.*
                , base >= 4.7 && < 5
                , async
                , attoparsec
                , bytestring
                , containers
                , data-default
                , fgl
                , lens-family
                , mainland-pretty
                , mtl
                , semigroups
                , split
                , text
                , temporary
                , transformers
                , vector
  extra-libraries:     tensorflow_c
  default-language:    Haskell2010
  include-dirs: .

Test-Suite FFITest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: FFITest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , bytestring
               , lens-family
               , proto-lens
               , tensorflow
               , tensorflow-proto
               , test-framework
               , test-framework-hunit


Test-Suite VarIntTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: VarIntTest.hs
  hs-source-dirs: tests
  build-depends: base
               , attoparsec
               , bytestring
               , google-shim
               , tensorflow
               , test-framework
               , test-framework-quickcheck2

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
