name:                tensorflow
version:             0.2.0.1
synopsis:            TensorFlow bindings.
description:
    This library provides an interface to the TensorFlow
    bindings.  "TensorFlow.Core" contains the base API for
    building and running computational graphs.  Other packages
    such as @tensorflow-ops@ contain bindings to the actual
    computational kernels.
    .
    For more documentation and examples, see
    <https://github.com/tensorflow/haskell#readme>
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
license-file:        LICENSE
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22
extra-source-files: third_party/tensorflow/c/c_api.h

library
  hs-source-dirs:   src
  exposed-modules:  TensorFlow.Build
                  , TensorFlow.BuildOp
                  , TensorFlow.ControlFlow
                  , TensorFlow.Core
                  , TensorFlow.Internal.FFI
                  , TensorFlow.Internal.VarInt
                  , TensorFlow.Nodes
                  , TensorFlow.Output
                  , TensorFlow.Session
                  , TensorFlow.Tensor
                  , TensorFlow.Types
  other-modules:    TensorFlow.Internal.Raw
  build-tools:      c2hs
  build-depends:  proto-lens >= 0.4.0 && < 0.6.0
                , tensorflow-proto == 0.2.*
                , base >= 4.7 && < 5
                , async
                , attoparsec
                , bytestring
                , containers
                , data-default
                , exceptions
                , fgl
                , lens-family
                , mainland-pretty
                , mtl
                , semigroups
                , split
                , text
                , temporary
                , transformers
                , vector
  extra-libraries:     tensorflow
  default-language:    Haskell2010
  include-dirs: .
  if os(darwin) {
    -- The default XCode installation doesn't search this path, so add it
    -- manually.  Alternately, users can run `xcode-select --install` to add
    -- it permanently to their search path.
    extra-lib-dirs: /usr/local/lib
  }

Test-Suite FFITest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: FFITest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , bytestring
               , lens-family
               , proto-lens
               , tensorflow
               , tensorflow-proto
               , test-framework
               , test-framework-hunit


Test-Suite VarIntTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: VarIntTest.hs
  hs-source-dirs: tests
  build-depends: base
               , attoparsec
               , bytestring
               , tensorflow
               , test-framework
               , test-framework-quickcheck2

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
